--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="indextest.html"><h2>Latitude</h2></a>
+    <a class="navbar-brand" href="index.html"><h2>Latitude</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,17 +25,17 @@
             Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="MaxTemperature.html">vs. Max Temperature</a>
-            <a class="dropdown-item" href="Humidity.html">vs. Humidity</a>            
-            <a class="dropdown-item" href="Cloudiness.html">vs. Cloudiness</a>
-            <a class="dropdown-item" href="WindSpeed.html">vs. Wind Speed</a>
+            <a class="dropdown-item" href="visualizations/MaxTemperature.html">vs. Max Temperature</a>
+            <a class="dropdown-item" href="visualizations/Humidity.html">vs. Humidity</a>            
+            <a class="dropdown-item" href="visualizations/Cloudiness.html">vs. Cloudiness</a>
+            <a class="dropdown-item" href="visualizations/WindSpeed.html">vs. Wind Speed</a>
           </div>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="Comparison.html">Comparison<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="visualizations/Comparison.html">Comparison<span class="sr-only">(current)</span></a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
+            <a class="nav-link" href="visualizations/data.html">Data</a>
         </li>
       </ul>
     </div>
@@ -47,7 +47,7 @@
                     <h1>Summary: Latitude vs. X</h1>
                     <hr class="my-4">
                     <p class="lead">
-                        <img src="Fig1.png" alt="Latitude vs Temperature" style="float:left;width:300px;height:250px;padding-right:10px;display:block;">
+                        <img src="Resources/assets_images/Fig1.png" alt="Latitude vs Temperature" style="float:left;width:300px;height:250px;padding-right:10px;display:block;">
                         The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs, latitude. Factor we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
                     </p>
                     <p class="lead">
@@ -61,27 +61,27 @@
                     <hr class="my-4">
                     <div class="row">
                         <div class="col-6">
-                            <a href="MaxTemperature.html">
-                            <img src="Fig1.png" alt="Max Temp" style="width:100%;height:90%;display:block;">
+                            <a href="visualizations/MaxTemperature.html">
+                            <img src="Resources/assets_images/Fig1.png" alt="Max Temp" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="Humidity.html">
-                            <img src="Fig2.png" alt="Humidity" style="width:100%;height:90%;display:block;">
+                            <a href="visualizations/Humidity.html">
+                            <img src="Resources/assets_images/Fig2.png" alt="Humidity" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
-                            <a href="Cloudiness.html">
-                            <img src="Fig3.png" alt="Cloudiness" style="width:100%;height:90%;display:block;">
+                            <a href="visualizations/Cloudiness.html">
+                            <img src="Resources/assets_images/Fig3.png" alt="Cloudiness" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="WindSpeed.html">
-                            <img src="Fig4.png" alt="Wind Speed" style="width:100%;height:90%;display:block;">
+                            <a href="visualizations/WindSpeed.html">
+                            <img src="Resources/assets_images/Fig4.png" alt="Wind Speed" style="width:100%;height:90%;display:block;">
                             </a>
-                        </div>  
+                        </div> 
                     </div>         
                 </div>
             </div>
