--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -29,7 +29,7 @@
             <a class="dropdown-item" href="visualizations/Humidity.html">vs. Humidity</a>            
             <a class="dropdown-item" href="visualizations/Cloudiness.html">vs. Cloudiness</a>
             <a class="dropdown-item" href="visualizations/WindSpeed.html">vs. Wind Speed</a>
-          </div>g
+          </div>
         </li>
         <li class="nav-item active">
             <a class="nav-link" href="visualizations/Comparison.html">Comparison<span class="sr-only">(current)</span></a>
