--- a/WebVisualizations/visualizations/WindSpeed.html
+++ b/WebVisualizations/visualizations/WindSpeed.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Wind Speed</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="indextest.html"><h2>Latitude</h2></a>
+    <a class="navbar-brand" href="../index.html"><h2>Latitude</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,7 +47,7 @@
                 <h1>Wind Speed</h1>
                 <hr class = "my-4">
                 <p class="lead">
-                <img src="Fig4.png" alt="Wind Speed" style="width:100%;height:95%;padding:10px;display:block;">
+                <img src="../Resources/assets_images/Fig4.png" alt="Wind Speed" style="width:100%;height:95%;padding:10px;display:block;">
                 </p>
                 <br>
                 <p class ="lead">There is no relationship between Latitude and Wind Speed. 
@@ -61,24 +61,24 @@
                     <div class="row">
                         <div class="col-6">
                             <a href="MaxTemperature.html">
-                            <img src="Fig1.png" alt="Max Temp" style="width:100%;height:90%;display:block;">
+                            <img src="../Resources/assets_images/Fig1.png" alt="Max Temp" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                         <div class="col-6">
                             <a href="Humidity.html">
-                            <img src="Fig2.png" alt="Humidity" style="width:100%;height:90%;display:block;">
+                            <img src="../Resources/assets_images/Fig2.png" alt="Humidity" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
                             <a href="Cloudiness.html">
-                            <img src="Fig3.png" alt="Cloudiness" style="width:100%;height:90%;display:block;">
+                            <img src="../Resources/assets_images/Fig3.png" alt="Cloudiness" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                         <div class="col-6">
                             <a href="WindSpeed.html">
-                            <img src="Fig4.png" alt="Wind Speed" style="width:100%;height:90%;display:block;">
+                            <img src="../Resources/assets_images/Fig4.png" alt="Wind Speed" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>  
                     </div>         
