--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -61,24 +61,24 @@
                     <hr class="my-4">
                     <div class="row">
                         <div class="col-6">
-                            <a href="MaxTemperature.html">
+                            <a href="visualizations/MaxTemperature.html">
                             <img src="Resources/assets_images/Fig1.png" alt="Max Temp" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="Humidity.html">
+                            <a href="visualizations/Humidity.html">
                             <img src="Resources/assets_images/Fig2.png" alt="Humidity" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
-                            <a href="Cloudiness.html">
+                            <a href="visualizations/Cloudiness.html">
                             <img src="Resources/assets_images/Fig3.png" alt="Cloudiness" style="width:100%;height:90%;display:block;">
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="WindSpeed.html">
+                            <a href="visualizations/WindSpeed.html">
                             <img src="Resources/assets_images/Fig4.png" alt="Wind Speed" style="width:100%;height:90%;display:block;">
                             </a>
                         </div> 
